Fixes #3076: IE 7 Table scrollbar disappearance.
svn changeset:8655/svn branch:6.1

--- a/WebContent/VAADIN/themes/base/styles.css
+++ b/WebContent/VAADIN/themes/base/styles.css
@@ -1170,6 +1170,9 @@ div.v-progressindicator-indeterminate-disabled {
 	overflow: hidden;
 	text-align: left; /* Force default alignment */
 }
+.v-ie7 .v-table {
+	overflow: visible;
+}
 .v-table-header-wrap {
 	overflow: hidden;
 	border: 1px solid #aaa;
