--- a/WebContent/VAADIN/themes/base/table/table.css
+++ b/WebContent/VAADIN/themes/base/table/table.css
@@ -26,6 +26,9 @@
 	overflow: hidden;
 	text-align: left; /* Force default alignment */
 }
+.v-ie7 .v-table {
+	overflow: visible;
+}
 .v-table-header-wrap {
 	overflow: hidden;
 	border: 1px solid #aaa;
